001.toml updated to proper format

--- a/src/001.toml
+++ b/src/001.toml
@@ -1,10 +1,46 @@
 id = "1"
-question = "What is the chief end of man?"
+question = "What is your only comfort in Life and Death?"
 
 [[sections]]
-text = "The chief end of man is to glorify God and to enjoy Him forever."
-verses = "1 Corinthians 10:31; Psalm 73:25-26"
+text = "That both in Soul and"
+verses = "1 Corinthians 6:19; 1 Thessalonians 5:10"
 
 [[sections]]
-text = "This is accomplished through worship, obedience, and communion with God."
-verses = "John 17:3; Psalm 16:11"
+text = "Body, whether I live or die"
+verses = "Romans 14:8"
+
+[[sections]]
+text = ", I am not mine own, but"
+verses = "1 Corinthians 3:23"
+
+[[sections]]
+text = "belong wholly unto my most faithful Lord and Saviour Jesus Christ: who by his most precious Blood"
+verses = "1 Peter 1:18-19; 1 John 1:7; 1 John 2:2"
+
+[[sections]]
+text = "fully satisfying for all my Sins, has"
+verses = "1 John 3:8; Hebrews 2:14-15"
+
+[[sections]]
+text = "delivered me from all the power of the Devil, and so"
+verses = "John 6:39"
+
+[[sections]]
+text = "preserves me, that without the will of my Heavenly Father not so much as an Hair may"
+verses = "Matthew 10:30; Luke 21:18"
+
+[[sections]]
+text = "fall from my Head; yea all things"
+verses = "Romans 8:28"
+
+[[sections]]
+text = "must serve for my safety: wherefore by his Spirit also he"
+verses = "2 Corinthians 1:12; 2 Corinthians 5:5; Ephesians 1:13-14"
+
+[[sections]]
+text = "assures me of everlasting Life, and"
+verses = "Romans 8:24-25"
+
+[[sections]]
+text = "makes me ready and prepared, that henceforth I may live to him."
+verses = ""
