--- a/src/002.toml
+++ b/src/002.toml
@@ -1,10 +1,52 @@
 id = "2"
-question = "What rule has God given to direct us how we may glorify and enjoy Him?"
+question = "Is not God therefore merciful?"
 
 [[sections]]
-text = "The Word of God, which is contained in the Scriptures of the Old and New Testaments,"
-verses = "2 Timothy 3:16; Ephesians 2:20"
+text = "Yea,Verily he is (þ) merciful 3 but (>, 
+that heis also(q)just: wherefore his Justice 
+Tequireth that the fame which is com- 
+mitted against the divine Majesty of God, 
+should also be xecompeniced with extream, | 
 
-[[sections]]
-text = "is the only rule to direct us how we may glorify and enjoy Him."
-verses = "1 John 1:3; Isaiah 8:20"
+
+that is,everlasting Punishment both i in Bo- | 
+dy and Soul. 
+
+
+CG) Ex2d, 36 6. Psal, 8.455 6: od. Exod 20. 5, 
+
+
+Cor. 6., þ 
+; Q& S ecing then by the just Juduen 5 | 
+
+
+en 
+'nal Punishments,is there yet any way or means 
+
+
+T- 
+
+
+far. 
+his 
+nd 
+
+
+nd - 
+
+
+(5) 
+God we are subjet both to temporal and eter- 
+
+
+remaining whereby we may be delivered from 
+these Punishments, and be reconciled to God? 
+
+A. God will have his (2) Justice'fati(- 
+fied: wherefore it is neceflary (b)that we 
+
+
+satisfy either by our {clves,or by another. 
+(4) Exod. 20. 5,5. and 23. 7. (6) Rom. 8. 3."
+verses = ""
+
