--- a/src/002.toml
+++ b/src/002.toml
@@ -1,52 +1,18 @@
 id = "2"
-question = "Is not God therefore merciful?"
+question = "How many things are necessary for you to know, that you enjoying this comfort may live and die happily?"
 
 [[sections]]
-text = "Yea,Verily he is (þ) merciful 3 but (>, 
-that heis also(q)just: wherefore his Justice 
-Tequireth that the fame which is com- 
-mitted against the divine Majesty of God, 
-should also be xecompeniced with extream, | 
+text = "Three. The first: what is the"
+verses = "Luke 24:47"
 
+[[sections]]
+text = "greatness of my sin and misery. The second, how I am"
+verses = "Romans 7:24; Romans 8:15; Titus 3:3-5"
 
-that is,everlasting Punishment both i in Bo- | 
-dy and Soul. 
+[[sections]]
+text = "delivered from all my sin and misery. The third, what thanks"
+verses = "John 17:3"
 
-
-CG) Ex2d, 36 6. Psal, 8.455 6: od. Exod 20. 5, 
-
-
-Cor. 6., þ 
-; Q& S ecing then by the just Juduen 5 | 
-
-
-en 
-'nal Punishments,is there yet any way or means 
-
-
-T- 
-
-
-far. 
-his 
-nd 
-
-
-nd - 
-
-
-(5) 
-God we are subjet both to temporal and eter- 
-
-
-remaining whereby we may be delivered from 
-these Punishments, and be reconciled to God? 
-
-A. God will have his (2) Justice'fati(- 
-fied: wherefore it is neceflary (b)that we 
-
-
-satisfy either by our {clves,or by another. 
-(4) Exod. 20. 5,5. and 23. 7. (6) Rom. 8. 3."
-verses = ""
-
+[[sections]]
+text = "I owe unto God for this delivery."
+verses = "Ephesians 5:10; 1 Peter 2:9; 1 Peter 3:10-11; Romans 9:11-13; Matthew 5:16; Titus 2:11-12"
