--- a/src/003.toml
+++ b/src/003.toml
@@ -1,14 +1,10 @@
 id = "3"
-question = "What manner of Mediator then, and 
-Deliverer must we seek for?"
+question = "Whence do you know your misery?"
 
 [[sections]]
-text = "Such a one verily as is very Man, 
-and perfectly just,and yet in Power above 
-all creatures,that is,one who also is yery 
-TT OO 
+text = "Out of the Law of"
+verses = "Romans 3:20; Romans 7:7-13"
 
-Cf) 1Cor. 15. 25. Jer. 23-6. fa. 53. 11: 2 Cor? 
-5: 14+ Heb. 7: 16, Ia. 3. 14. Rom, 8. 3. ++"
+[[sections]]
+text = "God."
 verses = ""
-
