--- a/src/004.toml
+++ b/src/004.toml
@@ -1,26 +1,10 @@
 id = "4"
-question = "Where- 
-
-
-—— —— 
-
-
-q & ) 4 
-Q:. Wherefore is it necessary that he be very 
-Man, and that perfefily just too?- '1"
+question = "What does the Law of God require of us?"
 
 [[sections]]
-text = "Because that the Justice of God 're- 
+text = "That which Christ does summarily teach us, Matthew 22:37-40. You shall love the Lord your God with all your Heart, and with all your Soul, and with all your Mind, and with all your"
+verses = "Luke 10:27"
 
-quireth that the same humane nature * 
-which hath s{inned.,do it. (elf. likewise make 
-
-
-recompence for fin: but (g) he that is - 
-himself a (b) sinner; cannot: make recom=- 
-
-
-pence for others. -: 
-" (g) Roni.'5, 124 19. (4)1 Per, 3.18, Heb. 9:26,"
+[[sections]]
+text = "Strength. This is the first and the great Commandment. And the second is like unto it, You shall love your Neighbour as yourself. On these two Commandments hang the whole Law and the Prophets."
 verses = ""
-
