--- a/src/005.toml
+++ b/src/005.toml
@@ -1,34 +1,14 @@
 id = "5"
-question = "Whence knowest thou this?."
+question = "Are you able to keep all these perfectly?"
 
 [[sections]]
-text = "Out of the Gospel which God first. 
-inade known (7) in Paradise, and (9) af-. 
-terwards did spread it a broad by the Pa- 
-txiarks and (p) Prophets; shadowed it. by, - 
+text = "No truly: for by nature I am"
+verses = "Romans 3:10-23; 1 John 1:8"
 
-| Sacrifices: 
+[[sections]]
+text = "prone to the hatred of God, and of my"
+verses = "Romans 8:7; Ephesians 2:3; Titus 3:3"
 
-
-” 
-' Law; and (q Ylasily accmplished it by his 
-. only begotten Son.Christ our Lord. 
-
-
-Do 
-
-
-9 6G A. @ 
-
-
-Sacrifices. and other. Cereomomies of the 
-
-
-(z) Gen. 3.15. (0) Gen.22.18s and 49-10,17T. 
-Rom, 1.2, Heb. 1. 1. As 3, 22..and 10.43. (f) 
-
-
-© John 5.46. Heb. 10. 7. (q) Rom. 10.4. Gal. 4: 4: 
-| and 3.24. Heb. 13. 8."
+[[sections]]
+text = "Neighbours."
 verses = ""
-
