--- a/src/007.toml
+++ b/src/007.toml
@@ -1,95 +1,14 @@
 id = "7"
-question = "Seing (d) there is but one only sub= 
-i stance of God why namest thou those three, the 
-P* Father,the Son,and the Holy Ghost? 
-N"
+question = "Whence then arises the wickedness of Man's nature?"
 
 [[sections]]
-text = "Because God (e) hath so manifested 
-himself in his Word;that these three di- 
-, stinc>t Persons are that one true everla- 
-(4) Deur. 6. 4. Eph. 4. 6. Isa. 44. 6. and 45. 5+ 
-| I Cor. 8.4, (e) Isa. 6r., Luk. 4. 18, Psa), 110. 
-I. Mat. 3.16, 17. and 28. 19. John» 14. 26. and 
-15. 26. Tir. 3. 5,6. Ephes, 2. 18. 2 Cor- 13. 14+ 
-Gal. 4. 6: 1 John 5, 9. 
- OQ. What believest thou whenthou sayest T 
-believe in God the Father Almighty, maker of 
-Heaven and Earth? 
-A. I believe the everlasting Father of 
-our Lord Jesus Christ (a), who made of 
-nothing Heaven and Earth, with all that 
-are in them 3 who likewise upholdeth (b) 
-and governeth the same by his eternal 
-Counsel and(c)Providence, This God I be- 
-lieve to be my God and Father for Christ 
-sake 3 and therefore so trust in him, and 
-rely on him, that I make no doubt but ” 
-Wi 
+text = "From the fall and disobedience of our first Parents Adam and"
+verses = "Romans 5:12-19"
 
+[[sections]]
+text = "Eve: hence is our nature so corrupt that we are all conceived and born in"
+verses = "Psalm 51:5; Genesis 5:3"
 
-Si" 00.0 
-
-
-— 
-» 
-
-
-Ec ASSES 
-
-
-» v 0. " 
-
-
-CI 
-will provide all (4) things necessary both 
-
-
-tor-my soul and body; and further, whatso + 
-
-
-ever evils he {endeth on me in this trou- 
-blesome life, he (e) will turn them to my 
-safety; seing both he is able to do it,as be- 
-ing(f”) God Almighty, and willing to do 
-it,as (g) being a bountiful Father. 
-
-
-(a) Gen, 1, 1, 2. Psal 33- 6. Job. 33: 4+ Acts, 
-4 24. and 14. 5's, &c. Isa; 45. 7. (6). Pfal. 104, 
-
-
-3. and 115, 3. Mat, 10. 29. Heb. I. 3. Ron. 11. [4 
-
-
-36. (c) John 1. 12. Rep. 8. 15. Gal, 4 5,6. Ephes. 
-I. 5. (d) Plal. 55. 23. Mat. 6. 26.. Luk, 12. 22. 
-E) _ 8. 28, {f) Isa, 46. 4- Rem, 10.12. and 
-Q What i the Providence of God? 
-
-_ 4. Thealmighty Power of God,every 
-where (b) prescnt, whereby he doth as it 
-were by his hand uphold (7) and govern 
-Heaven and Earth,with all the Creatures 
-therein,so that those things which grow 
-in the Earth,as likewise rain and drowth, 
-fruitfulne(s and barenness, meat /k) and 
-(1D) drifik, health and (m) sickness, riches 
-and poverty3. in a word, all things come 
-not rafhly. and by chance, but by his fa- 
-therly Counsel and Will. | 
-
-(hb) AR, 19. 25. Pal. 94. 9. Isa. 29. 15. Eztk. 
-
-
-$8.12. (:) Heb. 1. 2, 3. (4 Jer. $. 24. Act. 14- 
-17-.(1) John, 9. 3. (2) Prov. 22. 2. 
-
-
-ation and. Providence of God. profit us? 
-A, That. 
-
-
-X"
+[[sections]]
+text = "Sin."
 verses = ""
-
