--- a/src/010.toml
+++ b/src/010.toml
@@ -1,57 +1,14 @@
 id = "10"
-question = "W by is he calledChrift,that is,anointed? | | 
-
-
-Q_ YX Fa"
+question = "Does God leave this stubbornness and falling away of Man unpunished?"
 
 [[sections]]
-text = "Because he was ordained of the Fa- 
-ther, and anointed of the holy Ghost (c) 
-the chief Prophet (4) and Teacher whs 
-(e) hath od unto us the secret Coun- 
-{el,6 all the will of his Father concerning 
-our Redemtion, and the high Preist, who 
-with that one only Sacrifice of his Body 
-(f) hath redeemed us, and doth (g) conti- 
-nually make Tnterceffion to his Father for 
-uszand a King,whoruleth us by his Word 
-and Spirit, and defendeth (þ) and main- 
-taineth that Salvation which he hath pur- 
+text = "No: but is angry in most dreadful"
+verses = "Romans 5:12"
 
+[[sections]]
+text = "manner, as well for the sins wherein we are born, as also for those which ourselves commit, and in most just Judgment punishes them with present and everlasting Punishments, as himself pronounces: Cursed be he that confirms not all the words of this Law to do"
+verses = "Deuteronomy 27:26; Galatians 3:10"
 
-chased for- us: 
-
-(c) Pal. 45. 5. Heb. 1.9 Deur. 18.15, AQ. 2. 
-22. (4d) John. 1. 18. and 15. 15, Mat..It. 29. (e) 
-Heb. 9.21, and Io. 12« (f) Rem, 3, 24+and,s, gy 
-10, (s) Pfal. 2. 6. Luk. 1. 33. (þ) Max. 28.18. 
-
-
-. But why art thou called a Christian? 
-'£ Because through Faith'Tam a'mem- 
-ber of (7) Jesus Christ, (k,)and partaker of 
-his anointing, that both ICI) may confess 
-his name, and present my felt unto him 
-(m)a lively Sacrificeof thankfulness, and 
-allo my in this lite fight against " and | 
-| atan * 
-
-
-na ute 
-"7 rr _— 4-5 
-
-
-© 38-3 
-Satan with free and good conscience,and 
-(n) aftexwards enjoy an everlasting King= 
-dom with Christ, 
-
-
-(-) AC. I, 261 Cor. 6. 15. (4) 1 John 2, 
-
-29. Ma.. 59. 2. 1 John. 2. 28. (1!) Mat. 10. 33. 
-
-' (14) Rome. 12.1. Apoc, 5.8. 1Pet. 2.5, 2 Tim. 2. 
-| 12, Rows, 6: 12.13, Apoc, 1.6.1 Tim, 1.18 19."
+[[sections]]
+text = "them."
 verses = ""
-
