--- a/src/006.toml
+++ b/src/006.toml
@@ -1,119 +1,14 @@
 id = "6"
-question = "What are those things which are neces- 
-sary for a Christian man to believe? V!"
+question = "Did God then make man wicked and perverse?"
 
 [[sections]]
-text = "All things which are promised 
+text = "Not so, but rather he made him good and to his own"
+verses = "Genesis 1:31"
 
+[[sections]]
+text = "Image, that is, endued with true Righteousness and Holiness, that he might rightly know God his Creator, and heartily love him, and live with him blessed for ever, and that to laud and magnify"
+verses = "Genesis 1:26-27; 2 Corinthians 3:18; Colossians 3:10; Ephesians 4:24"
 
-us in the Gospel: the sum whereof is F: 
-
-
-briefly comprised in the Articles of theCa« 
-tholick and undoubted Faith of all true 
-
-
-Christzans,commontly called the Creed. 
-I believe in God the Father Andghey F 
-
-
-maker of Heaven and Earthzand in Jesus 
-Christ his only Son,our Lords which was 
-conceived by the Holy Ghost, born of the 
-
-
-was crucified, dead 
-
-
-» Not that he, (to wit, 
-Christ). went into the 
-lace of the damned, 
-ut that ke went abso. 
-
-
-lutely into the state of 
-
-
-the dead. See Dr. TV. 
-
-
-fher of Christ, in his bo. 
-
-
-dy of Divinity,pag.194. 
-and Mr. Preicvs on = 
-Creed, 
-
-
-+ Not that we are to 
-believe in, but that there 
-
-
-is a Catholick Cl-urch, * 
-
-
-and by Catholick, we 
-meaf no more then the 
-universal Church, which 
-15 a company chosen out 
-of whole mankind unto 
-everlasting life, by the 
-Word & Spirir of God, 
-
-
-& buried, hedescen-- 
-
-
-ded into *Hell 3 the 
-third day he arose a- 
-
-
-gain from the dead, 
-
-
-tl 
-
-
-O 
-
-
-- Virgin Mary, fuffered under Pontizs Pilate, 4 
-
-
-4 
-
-
-and aseended into 
-
-
-Heaven, fro whence 
-he shall come to 
-
-
-judge both the quick 
-
-
-and the dead. I be- 
-lieve in the Holy 
-Ghost, the Holy f 
-Catholick Church, 
-the Communion of 
-Saints, the forgive- 
-ness of fins, the Re- 
-{urrecion of the Bo- 
-
-
-dy, and the life everlasting. Amen. 
-
-
-is #, 
-ef. Qs Into how many parts is this Creed di- 
-
-
-vided? 
--4 4A. Into three: the first of the eternal 
-is Father, and our Creation: the second of 
-.. the Son andour Redemption: the third 
-ce Of the, Holy Ghost,and our Sanctification."
+[[sections]]
+text = "him."
 verses = ""
-
