--- a/src/009.toml
+++ b/src/009.toml
@@ -1,43 +1,14 @@
 id = "9"
-question = "Why is the Son of God called Fesus, 
-
-
-that is, a Saviour?"
+question = "Does not God then do injury to Man who in the Law requires that of him which he is not able to perform?"
 
 [[sections]]
-text = "Because he saveth us from our ( s) 
-sinszneither ought any fafety to be sought 
+text = "No: For God had made Man such a one as"
+verses = "John 3:5; Ephesians 4:24"
 
+[[sections]]
+text = "he might perform it: but Man by the impulse of the"
+verses = "Luke 10:30"
 
-for from any other (t), nor can elsewhere 
-be found. 
-
-
-(-) Mat. 1. 21. [t] Heb. 7. 25, AAS. 4. 12. 
-
-
-. Do they then believe in the only $ avi- 
-our Fesus, who seek, for happiness and safety 
-of the Saints, or of themselves, or else where? 
-
-A. No: for although in word they boast 
-themselves of him as their only Saviour, 
-yet indeed they deny the only (a)Saviour 
-Jesus: for it must needs be that either Jesus 
-is not a perfedt Saviour,or chat those who. 
-imbrace him as their Saviour with a true 
-
-
-faith 
-
-
-FT 
-faith, possess all things in him (b) which 
-are required unto Salvation. 
-() 1 Cor. 1.13- and 3o, &c, (5) Heb. 12.2» 
-
-
-Isa. 9: 6. Col. 1. 19, 20, and 2. 10. Ia, 43. 11. |}: 
-26d $6. John, 1. 16.."
+[[sections]]
+text = "Devil, and his own stubbornness bereaved himself and all his posterity of those Divine Graces."
 verses = ""
-
